feat: menu completo, desktop e mobile

--- a/assets/style/config.css
+++ b/assets/style/config.css
@@ -15,6 +15,6 @@
     --verde: #8AC926;
     --verdeMusho: 558804;
     --fundo: #111111;
-    --fonteDestque: "Aclonica", cursive, sans-serif;
+    --fonteDestaque: "Aclonica", cursive, sans-serif;
     --fontePadrao: 'Roboto', arial, sans-serif;
 }
